<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp"
    android:orientation="horizontal">

    <!-- Icon -->
    <ImageView
        android:id="@+id/recycler_view_row_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:contentDescription="@string/recycler_view_icon_description"
        android:src="@drawable/ic_g"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/recycler_view_text_left_margin_from_icon">

        <TextView
            android:id="@+id/recycler_view_row_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_data"
            android:textSize="16sp"/>

        <!-- Title -->
        <TextView
            android:id="@+id/recycler_view_row_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_view_title" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/recycler_view_row_edit_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:contentDescription="@string/edit" />
    </RelativeLayout>


</LinearLayout>
